--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
     </main>
     <footer>
-        <p>Dry Oar &copy; 2023 - Your First and Last Name Here</p>
+        <p>Dry Oar &copy; 2023 - Eliezio Silva</p>
         <p><a href="site_plan.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
