--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <img class="icon" src="oars.png" alt="oars icon">
                 <h2>Rapids</h2>
             </section>
+            <div id="background"></div>
             <img class="mountains" src="mountains.jpg" alt="Misty mountains">
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
