--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
         </div>
         <main class="home-grid">
             <section class="rivers-card">
-                <img class="card-img" src="rivers.jpg" alt="river in forest">
+                <img class="card-img center-image" src="rivers.jpg" alt="river in forest">
                 <img class="icon" src="river_icon.png" alt="river icon">
                 <h2>Rivers</h2>
             </section>
             <section class="camping-card">
-                <img class="card-img" src="camping.jpg" alt="tent in mountains">
+                <img class="card-img center-image" src="camping.jpg" alt="tent in mountains">
                 <img class="icon" src="fire_icon.png" alt="fire icon">
                 <h2>Camping</h2>
             </section>
             <section class="rapids-card">
-                <img class="card-img" src="rapids.jpg" alt="rafting boat">
+                <img class="card-img center-image" src="rapids.jpg" alt="rafting boat">
                 <img class="icon" src="oars.png" alt="oars icon">
                 <h2>Rapids</h2>
             </section>
