--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div id="content"></div>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="second_page.html">Page 2</a>
-            <a href="site_plan.html">Site Plan</a>
+            <a href="#">Page 2</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
