--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img class="icon" src="river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
-        <section class "camping-card">
+        <section class ="camping-card">
             <img class="card-img center-image" src="camping.jpg" alt="tent in mountains">
             <img class="icon" src="fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
