--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="second_page.html">Rivers</a>
+            <a href="site_plan.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
