--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
         </section>
     </div>
     <main class="home-grid">
+        
         <section class="rivers-card">
-            <img class="card-img center-image" src="rivers.jpg" alt="river in forest">
+            <a href="second_page.html">
+                <img class="card-img center-image" src="rivers.jpg" alt="river in forest">
+            </a>
             <img class="icon" src="river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
+        
         <section class ="camping-card">
             <img class="card-img center-image" src="camping.jpg" alt="tent in mountains">
             <img class="icon" src="fire_icon.png" alt="fire icon">
