--- a/second_page.html
+++ b/second_page.html
@@ -71,7 +71,7 @@
         
     </main>
     <h1>Wireframe</h1>
-    <img class="wireframe" src="wirefreme_w08_page2.png" alt="Wireframe">
+    <!-- <img class="wireframe" src="wirefreme_w08_page2.png" alt="Wireframe"> -->
 </body>
 <footer>
     <p>Dry Oar &copy; 2023 - Eliezio Silva</p>
