--- a/second_page.html
+++ b/second_page.html
@@ -70,7 +70,7 @@
         CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both.</p>
         
     </main>
-    <h1>Wireframe</h1>
+    <!-- <h1>Wireframe</h1> -->
     <!-- <img class="wireframe" src="wirefreme_w08_page2.png" alt="Wireframe"> -->
 </body>
 <footer>
