--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Go Home</title>
+    <title>Contact Us</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
     <button><a href="index.html">Go Home</a></button>
