--- a/contactus.html
+++ b/contactus.html
@@ -14,23 +14,22 @@
         <ul>
           <li>
             <label for="name">Name:</label>
-            <input type="text" id="name" name="user_name" />
+            <input type="text" id="name" name="user_name" placeholder="Enter your name" />
           </li>
           <li>
             <label for="mail">Email:</label>
-            <input type="email" id="mail" name="user_email" />
+            <input type="email" id="mail" name="user_email" placeholder="Enter your email" />
           </li>
           <li>
             <label for="msg">Message:</label>
-            <textarea id="msg" name="user_message"></textarea>
+            <textarea id="msg" name="user_message" placeholder="Enter your message"></textarea>
           </li>
           <li class="button">
             <button type="submit">Send your message</button>
           </li>
-      
-          …
         </ul>
       </form>
+      
 
       <script>
         // get the feedback div element so we can do something with it.
