--- a/contactus.html
+++ b/contactus.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="stylecontactus.css">
 
 </head>
 <body>
     <button><a href="index.html">Go Home</a></button>
     <div id="feedback"></div>
-    <form action="/my-handling-form-page" method="post">
-        <ul>
-          <li>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="user_name" placeholder="Enter your name" />
-          </li>
-          <li>
-            <label for="mail">Email:</label>
-            <input type="email" id="mail" name="user_email" placeholder="Enter your email" />
-          </li>
-          <li>
-            <label for="msg">Message:</label>
-            <textarea id="msg" name="user_message" placeholder="Enter your message"></textarea>
-          </li>
-          <li class="button">
-            <button type="submit">Send your message</button>
-          </li>
-        </ul>
-      </form>
+    <div class="bg-img"></div>
+        <form action="/my-handling-form-page" method="post">
+            <ul>
+            <li>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="user_name" placeholder="Enter your name" />
+            </li>
+            <li>
+                <label for="mail">Email:</label>
+                <input type="email" id="mail" name="user_email" placeholder="Enter your email" />
+            </li>
+            <li>
+                <label for="msg">Message:</label>
+                <textarea id="msg" name="user_message" placeholder="Enter your message"></textarea>
+            </li>
+            <li class="button">
+                <button type="submit">Send your message</button>
+            </li>
+            </ul>
+        </form>
+    </div>
       
 
       <script>
