--- a/contactus.html
+++ b/contactus.html
@@ -11,7 +11,7 @@
     <button><a href="index.html">Go Home</a></button>
     <div id="feedback"></div>
     <div class="bg-img"></div>
-        <form action="/my-handling-form-page" method="post">
+        <form action="/my-handling-form-page" method="post" class="container">
             <ul>
             <li>
                 <label for="name">Name:</label>
