--- a/contactus.html
+++ b/contactus.html
@@ -10,6 +10,8 @@
 <body>
     <button><a href="index.html">Go Home</a></button>
     <div id="feedback"></div>
+    <img src="rapid_images_form.jfif" class="background-image" alt="Background Image">
+
     <div class="bg-img"></div>
         <form action="/my-handling-form-page" method="post" class="container">
             <ul>
@@ -25,7 +27,7 @@
                 <label for="msg">Message:</label>
                 <textarea id="msg" name="user_message" placeholder="Enter your message"></textarea>
             </li>
-            <li class="button">
+            <li class="button1">
                 <button type="submit">Send your message</button>
             </li>
             </ul>
