--- a/contactus.html
+++ b/contactus.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" type="text/css" href="stylecontactus.css">
-
 </head>
 <body>
     <button><a href="index.html">Go Home</a></button>
     <div id="feedback"></div>
     <img src="rapid_images_form.jfif" class="background-image" alt="Background Image">
 
-    <div class="bg-img"></div>
-        <form action="/my-handling-form-page" method="post" class="container">
-            <ul>
+    <form action="/my-handling-form-page" method="post" class="container">
+        <ul>
             <li>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="user_name" placeholder="Enter your name" />
@@ -27,12 +25,11 @@
                 <label for="msg">Message:</label>
                 <textarea id="msg" name="user_message" placeholder="Enter your message"></textarea>
             </li>
-            <li class="button1">
+            <li class="button">
                 <button type="submit">Send your message</button>
             </li>
-            </ul>
-        </form>
-    </div>
+        </ul>
+    </form>
       
 
       <script>
