--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" type="text/css" href="stylecontactus.css">
 </head>
 <body>
-    <button><a href="index.html">Go Home</a></button>
+    <div id="content"></div>
+    <header>
+        <a id="logo_link" href="index.html">
+            <img class="logo" src="logo.png" alt="Dry Oar Logo">
+        </a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="second_page.html">Rivers</a>
+            <a href="site_plan.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
+    </header>
     <div id="feedback"></div>
     <img src="rapid_images_form.jfif" class="background-image" alt="Background Image">
 
@@ -49,5 +60,21 @@
             document.body.classList.toggle('moveDown');
         });
     </script>
+    <footer>
+        <p>Dry Oar &copy; 2023 - Eliezio Silva</p>
+        <p><a href="site_plan.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
