--- a/second_page.html
+++ b/second_page.html
@@ -15,8 +15,8 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="second_page.html">Rivers</a>
-            <a href="site_plan.html">Site Plan</a>
+            <!-- <a href="second_page.html">Rivers</a> -->
+            <!-- <a href="site_plan.html">Site Plan</a> -->
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
