--- a/contactus.html
+++ b/contactus.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="second_page.html">Rivers</a>
-            <a href="site_plan.html">Site Plan</a>
+            <!-- <a href="site_plan.html">Site Plan</a> -->
             <!-- <a href="contactus.html">Contact Us</a> -->
         </nav>
     </header>
