--- a/contactus.html
+++ b/contactus.html
@@ -49,7 +49,7 @@
                 <textarea id="msg" name="user_message" placeholder="Enter your message"></textarea>
             </li>
             <li class="button">
-                <button type="submit">Send your message</button>
+                <button type="submit">Send</button>
             </li>
         </ul>
     </form>
