--- a/contactus.html
+++ b/contactus.html
@@ -21,7 +21,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="rapid_images_form.jfif" alt="River">
+            <img id="hero-img" src="rapid_images_form - Copy.jfif" alt="River">
         </div>
         <!-- <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
